# Taible

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.md  pyproject.toml  railway.toml  start.py
alembic/: env.py
alembic/versions/: 20250827_104954_创建filerecord表.py
app/: __init__.py  main.py
app/core/: config.py  database.py  redis.py
app/features/storage/: models.py  router.py  service.py
app/features/users/: __init__.py  router.py  service.py
app/shared/: exceptions.py  schemas.py
app/shared/schemas/: __init__.py
scripts/: manage_migrations.py  start.py
